# edge-iot

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile.RPi  README.md  birdnet_tf_conv_optimized.onnx  main.py  main_.py  pipeline.py  requirements.txt  requirements_idf.txt  sdkconfig  sdkconfig.defaults
.github/workflows/: continuous_integration.yml
backend/: .env  .eslintrc  README.md  app.js  audio_client.html  package-lock.json  package.json
backend/config/: cookie.js  keys.js
backend/constants/: errorCodes.js
backend/controllers/: birds.controller.js  node.controller.js
backend/helpers/: generalHelper.js  requestHandler.js
backend/js/: worker.js
backend/middleware/: autoRouter.js  bootstrap.js
bird-watcher/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
config/: xeno-canto.yaml
data/: xeno-canto.ipynb
docs/: audio_processing.md  design.md  esp_sw_architecture.md  lora_interconnection.md  setup.md  wiring.md
include/audio/: microphone.h  preprocess.h
include/esp-led/: esp_led.h
include/gps/: gps.h
include/heap-log/: heap_log.h
include/lora/: lora.h  lora_esp32.h  lora_esp32_logic.h  lora_package.h  lora_rpi.h
include/sim_dsp/: aux_dct.h  aux_err.h  aux_fft.h  aux_fft_tables.h  aux_wind.h
include/websocket/: websocket.h
include/wifi/: wifi.h
lora-sender/: lora-sender.ino
models/cpp/: bird_coefficient.hpp  bird_model.hpp  bird_quantization_params.pickle
src/: __init__.py
src/audio/: CMakeLists.txt  __init__.py  audio_processing.py  microphone.c  microphone.cpp  pc_main.c  pc_main.cpp  preprocess.c  preprocess.cpp  preprocess.py  setup.py  tmp_preprocess.py
src/dataset/: __init__.py  dataset.py  esc50.py  tensorflow.py  xeno_canto.py
src/esp-dl/: CMakeLists.txt
src/esp-dl/include/layer/: dl_layer_softmax.hpp
src/esp-led/: esp_led.c  idf_component.yml
src/esp32/: CMakeLists.txt  Kconfig.projbuild  audio.c  main.c  main.cpp  mfcc_values.c
src/esp_led/: CMakeLists.txt
src/gps/: CMakeLists.txt  gps.c  gps_example_main.c
src/heap-log/: CMakeLists.txt  heap_log.c
src/interface/: esc50.py  xeno_canto.py
src/lora/: CMakeLists.txt  Kconfig.projbuild  README  lora.c  lora_esp32.c  lora_esp32_logic.c  lora_package.c  (+2 more)
(+85 files in other folders)
